namespacing components to avoid future collisions

--- a/src/WePrint/ClientApp/src/views/organization/components/org-projects.scss
+++ b/src/WePrint/ClientApp/src/views/organization/components/org-projects.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/sizes';
 @import '../../../assets/styles/colors';
 
-.project {
+.org-project {
   cursor: pointer;
   padding: ms(-2);
   padding-top: ms(0);
