--- a/src/WePrint/ClientApp/src/views/organization/components/org-users.scss
+++ b/src/WePrint/ClientApp/src/views/organization/components/org-users.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/sizes';
 @import '../../../assets/styles/colors';
 
-.user {
+.org-user {
   padding: ms(-2);
   margin-bottom: ms(-2);
   border-radius: ms(-3);
